# PythonPackageTemplate

./: .gitignore  .readthedocs.yaml  BUG.md  CHANGELOG.md  LICENSE  PUBLISH.md  Pipfile  README.md  ex1.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  pylint.yml
doc/: CHANGELOG.md  index.md  requirements.txt
doc/source/: conf.py  index.rst  install.md  markdown.md  usage.rst
example_package_samreynoldsmath/: __init__.py  jacobi.py  solver.py
mypackage/: __init__.py  mod_u.py  mod_v.py  solver.py
mypackage/src1/: __init__.py  mod_a.py  mod_b.py  mod_c.py
mypackage/src1/src_A/: __init__.py  mod_p.py  mod_q.py
mypackage/src2/: __init__.py  mod_x.py  mod_y.py
mypackage/thing/: __init__.py  thing.py
test/: test_solver.py
